fix: incorrect display content__section--left markup on mobile screens in album orientation

--- a/src/assets/scss/media.scss
+++ b/src/assets/scss/media.scss
@@ -2,25 +2,16 @@
     .form__input--message.form__input--message {
         padding: 20px 90px 20px 90px;
     }
+
     .ant-layout-sider-collapsed.ant-layout-sider-collapsed {
         flex: 0 0 50px !important;
         max-width: 50px !important;
         min-width: 50px !important;
         width: 50px !important;
     }
+
     .logo.logo {
         height: 20px;
-    }
-    .friends,
-    .channels {
-        max-height: calc(100vh - 40rem);
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    .friends,
-    .channels {
-        max-height: calc(100vh - 36rem);
     }
 }
 
@@ -41,15 +32,19 @@
     .chat__column--name.chat__column--name {
         flex: 0 0 auto;
     }
+
     .chat__column--user.chat__column--user {
         margin: 0 20px;
     }
+
     .chat__column--form.chat__column--form {
         flex: 1 1 auto;
     }
+
     .form {
         width: 100%;
     }
+
     .chat__column--notification.chat__column--notification {
         display: none;
     }
@@ -59,35 +54,45 @@
     .chat__column--settings.chat__column--settings {
         display: none;
     }
+
     .chat__column--notification.chat__column--notification {
         margin: 20px 5px 0 5px;
     }
+
     .account-card__row,
     .account-card__header {
         flex-direction: column;
     }
+
     .account-card__text {
         margin: 0 0 10px 0;
     }
+
     .account-card__preview {
         margin: 0 0 20px 0;
     }
+
     .account__button--profileEdit {
         width: 100%;
     }
+
     .account__button--disableAcc.account__button--disableAcc {
         margin: 0 0 20px 0;
     }
+
     .account__buttons {
         display: flex;
         flex-direction: column;
     }
+
     .warning__button {
         min-width: 120px;
     }
+
     .warning__title {
         font-size: 24px;
     }
+
     .warning__description {
         font-size: 16px;
     }
@@ -97,6 +102,7 @@
     .chat__column--form {
         margin: 20px 0 0 0;
     }
+
     .chat__column--user.chat__column--user {
         margin: 0 0 0 20px;
     }
@@ -112,12 +118,15 @@
     .chat__column--user.chat__column--user {
         margin: 0 0 0 20px;
     }
+
     .chat__column--form {
         margin: 10px 0 0 0;
     }
+
     .ant-result.ant-result {
         padding: 0;
     }
+
     .ant-result-extra.ant-result-extra {
         margin: 10px 0 0 0;
     }
@@ -127,12 +136,15 @@
     .chat__column--form {
         margin: 10px 0 0 0;
     }
+
     .chat__column--user.chat__column--user {
         margin: 0 0 0 20px;
     }
+
     .warning__button {
         min-width: 100px;
     }
+
     .ant-result-title,
     .ant-result-subtitle {
         display: none;
