--- a/src/components/ui/Channel/Channel.scss
+++ b/src/components/ui/Channel/Channel.scss
@@ -1,5 +1,5 @@
 .channels {
-    max-height: calc(100vh - 40rem);
+    max-height: calc(35vh);
     overflow-y: scroll;
     overflow-x: hidden;
     list-style: none;
